Initial work on updating to Django 2.x

--- a/Pipfile
+++ b/Pipfile
@@ -7,28 +7,26 @@ name = "pypi"
 boto = "==2.49.0"
 cryptography = "~=2.3"
 dj-database-url = "==0.5.0"
-django-allauth = "==0.36.0"
-django-autoslug = "==1.9.3"
+django-allauth = "==0.37.1"
+django-autoslug = {ref = "4dc75083d84265e019a900d636273c731457193d", git = "https://github.com/justinmayer/django-autoslug"}
 django-braces = "==1.13.0"
 django-configurations = "==2.1"
 django-cors-headers = "==2.4.0"
 django-debug-toolbar = "==1.9.1"
 django-dotenv = "==1.2"
-django-extensions = "==2.1.0"
-django-filter = "==1.1.0"
+django-extensions = "==2.1.2"
+django-filter = "==2.0.0"
 django-import-export = "==1.0.1"
 django-rest-swagger = "==2.2.0"
-django-secure = "==1.0.1"
 django-storages = "==1.1.8"
-djangorestframework = "==3.6.3"
+djangorestframework = "==3.7.2"
 gunicorn = "==19.9.0"
-lxml = "==3.3.5"
 memoize = "==1.0.0"
 "psycopg2-binary" = "==2.7.5"
 pytz = "==2018.5"
 raven = "==6.9.0"
 whitenoise = "==2.0.6"
-Django = "==1.11.15"
+Django = "==2.1"
 Markdown = "==2.6.4"
 MarkupSafe = "==1.0"
 Werkzeug = "==0.9.4"
@@ -37,7 +35,7 @@ Werkzeug = "==0.9.4"
 pre-commit = "*"
 
 [requires]
-python_version = "2.7"
+python_version = "3.7"
 
 [pipenv]
 allow_prereleases = true
