--- a/Pipfile
+++ b/Pipfile
@@ -26,10 +26,11 @@ memoize = "==1.0.0"
 pytz = "==2018.5"
 raven = "==6.9.0"
 whitenoise = "==2.0.6"
-Django = "==2.1"
+Django = "==2.1.3"
 Markdown = "==2.6.4"
 MarkupSafe = "==1.0"
 Werkzeug = "==0.9.4"
+factory-boy = "==2.11.1"
 
 [dev-packages]
 pre-commit = "*"
